4371
smaller test case:
```scala
trait C

class Outer {
  object O extends C { self => }
}
```

2.8.0.final:
```scala
t3612.scala:3: error: object O cannot be instantiated because it does not conform to its self-type Outer.this.O.type
class Outer {
            ^
one error found
```
